Extra margin to prevent grid being obscured by footer

--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -166,6 +166,8 @@ p{
 		}
 
 		.grid{
+			margin-bottom: 5rem;
+
 			.grid-item{
 				.secondary-font;
 
